# calibrain_py

./: .gitignore  README.md  calibrain.py  pipeline.py  pyproject.toml
analysis/: performance_analysis.py
calibrain/: calibrain.py
calibrain/performance/: performance.py
calibrain/visual_inspector/: visual_inspector.py
configs/: test.toml  test.yaml  test_config.py
eye/: features.py  preprocessing.py
heart/: features.py  peak_detectors.py  preprocessing.py
performance/: performance.py  preproc_and_features.py
utils/: base.py  helper.py
