[tool.poetry]
name = "calibrain_py"
version = "0.1.0"
description = "Data processing functionality for Calibrain"
authors = ["Wouter Durnez <wouter.durnez@ugent.com>", "Jonas De Bruyne <jonas.debruyne@ugent.com>", ]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.4.2"
colorama = "^0.4.4"
pyfiglet = "^0.8.post1"
tqdm = "^4.64.0"
dash = "^2.5.1"
dash-bootstrap-components = "^1.1.0"
plotly = "^5.8.0"
numpy = "^1.23.0"
scipy = "^1.8.1"
seaborn = "^0.11.2"
toml = "^0.10.2"
matplotlib = "3.5.0"
biosppy = "^1.0.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
